# routes/api.js
@@ -1,8 +1,10 @@
 const Router = require("express").Router();
 const authentication = require("../middleware/authentication");
 
-const { login, logout, newAccount, getAllUsers } = require("./modules/account");
+const { login, logout, newAccount, getAllAccount } = require("./modules/account");
 const { generateToken, getAccessToken } = require("./modules/test");
+const { newOrder } = require("./modules/order");
+const { newTable } = require("./modules/table");
 const { admin } = require("../middleware/authorization");
 
 /**
@@ -11,8 +13,20 @@ const { admin } = require("../middleware/authorization");
 
 Router.post("/account/login", login);
 Router.get("/account/logout", authentication, logout);
-Router.post("/account/newAccount", authentication, admin, newAccount);
-Router.get("/account/get-all-users", authentication, admin, getAllUsers);
+Router.post("/account/new-account", authentication, admin, newAccount);
+Router.get("/account/get-all-account", authentication, admin, getAllAccount);
+
+/**
+ * Order ================================================================
+ */
+
+Router.post("/order/new", authentication, admin, newOrder);
+
+/**
+ * Table ================================================================
+ */
+
+Router.post("/table/new-table", authentication, admin, newTable);
 
 /**
  * Test ================================================================
